PROD_10-24-19/force-app/main/default/objects/Promotion__c/fields/Promotion_Details__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Details__c</fullName>
    <inlineHelpText>Developer notes, list of items to mode with change sets vs manual, dial in conference line....</inlineHelpText>
    <label>Promotion Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>