PROD_10-24-19/force-app/main/default/objects/Promotion__c/fields/Reason_for_failure__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_failure__c</fullName>
    <label>Reason for failure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>